--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
-# Use the official Python image from the Docker Hub
-FROM python:3.12.7
+# Stage 1: Build and Test
+FROM python:3.12.7 AS build
 
 # Set the working directory in the container
 WORKDIR /app
@@ -10,8 +10,28 @@ COPY requirements.txt .
 # Install the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application code into the container
+# Copy the application code and test files
 COPY . .
+
+# Run tests
+RUN PYTHONPATH=../app python -m unittest discover -v -s test
+
+# Stage 2: Production
+FROM python:3.12.7
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy only the necessary files from the build stage
+COPY --from=build /app/model ./model
+COPY --from=build /app/repository ./repository
+COPY --from=build /app/service ./service
+COPY --from=build /app/requirements.txt .
+COPY --from=build /app/server.py .
+
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+RUN ls
 
 # Expose the port the app runs on
 EXPOSE 8080
