--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,8 @@
-REDIS_HOST=redis
-REDIS_PORT=6379
+REDIS_HOST=localhost
+REDIS_PORT=8000
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_password
+TO_EMAIL=xxxx@xxx.xxx
